--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,31 @@
       </div>
     <% end %>
 
+    <nav class="navbar is-warning">
+      <div class="navbar-brand">
+        <%= link_to root_path, class: "navbar-item" do %>
+          <h1 class="title is-4" style="font-family: cursive;">recipegram</h1>
+        <% end %>
+        <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    
+    <% if user_signed_in? %>
+      <p class="control">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
+      </p>
+    <% else %>
+      <p class="control">
+        <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
+      </p>
+      <p class="control">
+        <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-light" %>
+      </p>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
