--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,13 @@
       </div>
 
       <% if user_signed_in? %>
-        
-
+        <div id="navbarExampleTransparentExample" class="navbar-menu">
+          <div class="navbar-item">
+            <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
+          </div>
+          <div class="navbar-item">
+            <%= link_to "新規投稿", new_recipe_path, class: "navbar-item button is-warning is-light" %>
+          </div>
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="field is-grouped">
@@ -55,7 +60,10 @@
           </div>
         </div>
       <% else %>
-        
+        <div id="navbarExampleTransparentExample" class="navbar-menu">
+          <div class="navbar-item">
+            <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
+          </div>
           <div class="navbar-item">
             <%= link_to "レシピグラマー一覧", users_path, class: "navbar-item button is-warning is-light" %>
           </div>
