--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,10 @@
 .profile_image {
     border-radius: 50%;
 }
+
+.main-image {
+    height: 940px;
+    background-image: url(spaghetti-g3310bf5d8_1920.jpg);
+    background-repeat: none;
+    background-size: contain;
+}
